完善RWD排版，以及新增社群連結功能

--- a/icemenu.html
+++ b/icemenu.html
@@ -15,7 +15,7 @@
         <!-- 導覽列開始 -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light py-4">
             <a class="navbar-brand mx-auto d-block header-logo" href="./index.html">
-                <img src="./img/header-logo.svg" alt="icecream">
+                <img class="img-fluid" src="./img/header-logo.svg" alt="icecream">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,15 +42,15 @@
         <!-- 宣傳圖片開始 -->
         <div class="header-icemenu-image">
             <h1 class="text-hide">Ethan冰品電商網站
-                <img class="header-icemenu-logo" src="./img/content-logo.svg" alt="">
+                <img  class="header-icemenu-logo img-fluid" src="./img/content-logo.svg" alt="">
             </h1>
         </div>
         <!-- 宣傳圖片結束 -->
         <section class="my-5"></section>
         <!-- 購物清單開始 -->
         <div class="row">
-            <div class="col-4">
-                <ul class="list-group text-center">
+            <div class="col-lg-4">
+                <ul class="list-group text-center mb-4">
                     <li class="list-group-item bg-login-form text-white">冰品類別</li>
                     <li class="list-group-item list-group-item-action list-group-item-light ">所有甜點</li>
                     <li class="list-group-item list-group-item-action list-group-item-light ">本日精選</li>
@@ -58,7 +58,7 @@
                     <li class="list-group-item list-group-item-action list-group-item-light ">新品上市</li>
                 </ul>
             </div>
-            <div class="col-8">
+            <div class="col-lg-8">
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="card content-relative-position mb-3">
@@ -155,7 +155,7 @@
     <footer class="footer-bg p-4">
         <div class="container py-2">
             <div class="row d-flex justify-content-center">
-                <div class="col-lg-5 flex-column justify-content-center">
+                <div class="col col-lg-5 flex-column justify-content-center">
                     <div>
                         <img src="./img/header-logo.svg" alt="icecream" style="margin-left: -10px;">
                     </div>
@@ -166,16 +166,17 @@
                             300 桃園市桃園區復興路312號</p>
                     </div>
                 </div>
-                <div class="col-lg-5 text-right">
+                <div class="col col-lg-5 text-right ">
                     <img src="./img/iconfinder-icon.svg" alt="svgimage">
+                    <iframe class="mx-auto" width="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1278.9170898835205!2d121.22605350480184!3d24.95509614614575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34682248487f7e11%3A0xf4b60d8fc26aa9dc!2z5qaV5qi55LiL57a_57a_5Yaw!5e0!3m2!1szh-TW!2stw!4v1602985855410!5m2!1szh-TW!2stw" width="400" height="250" frameborder="0" style="border:1px solid grey;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-5">
+            <div class="row justify-content-center my-3">
+                <div class="col col-lg-5">
                     <img src="./img/icon.PNG" alt="">
                     <img src="./img/icon2.PNG" alt="">
                 </div>
-                <div class="col-lg-5 text-right">
+                <div class="col col-lg-5 text-right">
                     <span class="footer-font-size footer-font-color">© 2018 Icecream* All Rights Reserved</span>
                 </div>
             </div>
