--- a/index.html
+++ b/index.html
@@ -75,28 +75,28 @@
         <!-- header-section結束 -->
     <!-- content-section開始-->
     </div>
-    <section class="my-5 py-2"></section>
+    <section class="my-5 py-2 py-lg-2"></section>
     <div class="bg-primary-content">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img class="img-fluid" src="./img/冰淇淋_2.jpg" alt="">
                 </div>
-                <div class="col-6 p-4 content-text-color">
+                <div class="col-lg-6 p-4 content-text-color">
                     <h4 class="py-3">冰淇淋加上芒果與巧克力，冰涼口感帶有甜度，絕對讓你愛不釋手!</h4 class="py-3">
                     <p>其口感細緻，果香自然無酸味，並且有少許奶香。口味都非常順口、不甜不膩，甚至還吃的到果粒，而且吃完之後不會非常的口渴，淡淡的果香非常清爽</p>
                 </div>
             </div>
         </div>
     </div>
-    <section class="my-5 py-5"></section>
+    <section class="my-5 py-2 py-lg-5"></section>
     <div class="bg-primary-content">
         <div class="container">
             <div class="row flex-row-reverse">
-                <div class="col-6">
+                <div class="col-lg-6">
                     <img class="img-fluid" src="./img/冰淇淋_3.jpg" alt="">
                 </div>
-                <div class="col-6 p-4 content-text-color">
+                <div class="col-lg-6 p-4 content-text-color">
                     <h4 class="py-3">抹茶冰淇淋搭配上焦糖蜂蜜，迸出新鮮好滋味!</h4>
                     <p>抹茶香氣醇郁，甜度得宜。雖濃卻甘而順口，因其乳含量較低，所以吃到最後也不覺膩口。</p>
                 </div>
@@ -106,7 +106,7 @@
     <!-- content-section結束-->
     <!-- content-section開始-->
     <section class="my-5 py-5 text-center">
-        <img src="./img/content-logo.svg" alt="冰品">
+        <img src="./img/content-logo.svg" alt="冰品" class="img-fluid">
     </section>
     <!-- content-section結束  -->
     <!-- 商品介紹開始 -->
@@ -196,8 +196,7 @@
                 </div>
                 <div class="col col-lg-5 text-right ">
                     <img src="./img/iconfinder-icon.svg" alt="svgimage">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1278.9170898835205!2d121.22605350480184!3d24.95509614614575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34682248487f7e11%3A0xf4b60d8fc26aa9dc!2z5qaV5qi55LiL57a_57a_5Yaw!5e0!3m2!1szh-TW!2stw!4v1602985855410!5m2!1szh-TW!2stw" width="400" height="250" frameborder="0" style="border:1px solid grey;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
+                    <iframe class="mx-auto" width="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1278.9170898835205!2d121.22605350480184!3d24.95509614614575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34682248487f7e11%3A0xf4b60d8fc26aa9dc!2z5qaV5qi55LiL57a_57a_5Yaw!5e0!3m2!1szh-TW!2stw!4v1602985855410!5m2!1szh-TW!2stw" width="400" height="250" frameborder="0" style="border:1px solid grey;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
             <div class="row justify-content-center my-3">
