--- a/cart.html
+++ b/cart.html
@@ -122,7 +122,7 @@
     <footer class="footer-bg p-4">
         <div class="container py-2">
             <div class="row d-flex justify-content-center">
-                <div class="col-lg-5 flex-column justify-content-center">
+                <div class="col col-lg-5 flex-column justify-content-center">
                     <div>
                         <img src="./img/header-logo.svg" alt="icecream" style="margin-left: -10px;">
                     </div>
@@ -133,16 +133,17 @@
                             300 桃園市桃園區復興路312號</p>
                     </div>
                 </div>
-                <div class="col-lg-5 text-right">
+                <div class="col col-lg-5 text-right ">
                     <img src="./img/iconfinder-icon.svg" alt="svgimage">
+                    <iframe class="mx-auto" width="300" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1278.9170898835205!2d121.22605350480184!3d24.95509614614575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34682248487f7e11%3A0xf4b60d8fc26aa9dc!2z5qaV5qi55LiL57a_57a_5Yaw!5e0!3m2!1szh-TW!2stw!4v1602985855410!5m2!1szh-TW!2stw" width="400" height="250" frameborder="0" style="border:1px solid grey;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-5">
+            <div class="row justify-content-center my-3">
+                <div class="col col-lg-5">
                     <img src="./img/icon.PNG" alt="">
                     <img src="./img/icon2.PNG" alt="">
                 </div>
-                <div class="col-lg-5 text-right">
+                <div class="col col-lg-5 text-right">
                     <span class="footer-font-size footer-font-color">© 2018 Icecream* All Rights Reserved</span>
                 </div>
             </div>
